--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,19 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 </style>
   <body > 
     <article>
       <div id="banner">
         <video autoplay loop>
-          <source src="http://0x0.st/H4h-.mkv">
+          <source src="/video/video.crdownload">
         </video >
       </div>
       <div class="container">
 
         <div id="menu">
+          <div class="sec">
+            <h3>Menu</h3>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="">About</a><li>
+              <li>Trips</li>
+              <li>Recipies</li>
+            </ul>
+          </div>
           <div class="sec">
             <h3>Contact</h3>
             <ul>
@@ -23,13 +32,7 @@
               <li>Email</li>
             </ul>
           </div>
-          <div class="sec">
-            <h3>Click Click Click</h3>
-            <div class="sub-sec">
-              <span class="click">1</span>
-              <button class="click-button">Click here </button>
-            </div>
-          </div>
+
           <div class="sec">
             <h3>Cool song</h3>
             <div class="sub-sec">
@@ -40,7 +43,7 @@
                 <div id="artist" style="padding-top: 10px;">
                   <a target="_blank" href="https://www.youtube.com/watch?v=hMsivXae1oM&ab_channel=jonatanleandoer96-Topic"><span> Psycho's in Charge</span></a>
                 <div>
-                  <marquee scrollamount="2" id="song-name"> Jonatan Leandoer96 </marquee>
+                  <marquee scrollamount="2" class="gray-text"> Jonatan Leandoer96 </marquee>
                 </div>
               </div>
             </div>
@@ -61,25 +64,38 @@
           <h3>Welcome!</h3>
             <div class="sub-sec wel-sec" style="padding:10px;">
               <p>
-              Welcome to this corner of the internet, this page is in a very early stage, im gonna optimize it and add new stuff (chat). Im gonna upload trips to different places, mostly big mountains, one day im gonna climb a big one. Feel free to sugest new content to upload at my <a href="#">Discord</a>
-              </p >
-            </div>
-          </div>
 
+Welcome to my corner of the internet! This page is a personal space where I'll share my trips, recipes, favorite songs, and maybe more cool stuff in the future. I hope you like it.
+              </p>
+              <br>
+              <p>
+
+This page is still under development, if you find anything weird, please let me know through my email or Discord.
+              </p>
+           </div>
+          </div>
           <div class="main-sec">
-            <div class="mid-sec">
+            <div class="sec">
               <h3>Updates</h3>
-              <div>
+              <div class="new-container">
+                <div class="new">
+                  <span>Page creation</span>
+                  <span class="date">22 Oct 2023</span>
+                </div>
+                <div>
+                  <p class="up-p">After a lot of work, page is finally up </p>
+                </div>
               </div>
             </div>
-            <div class="mid-sec">
-              <h3 class="cool-pic-text">Very cool pic</h3>
+            <div class="sec">
+              <h3 class="">Very cool pic</h3>
+              <div class="img-class">
               <img id="cool" src="http://0x0.st/HJNU.jpeg" alt="very cool pic">
+              <p class="gray-text"><i>-. Manga Climber</i></p>
+              </div>
             </div>
           </div>
-
         </div>
-
         <div id="guestbook">
           <div class="sec">
             <h3>Chat</h3>
@@ -97,7 +113,5 @@
     <footer>
       <p id="footer-text"> &copy; Copyright 2023 Nezi </p> 
     </footer>
-
-
   </body>
 </html>
