--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="styles.css"> </head>
+    <link rel="stylesheet" href="style.css"> </head>
 </style>
   <body > 
     <article>
       <div id="banner">
         <video autoplay loop>
-          <source src="/video/video.crdownload">
+          <source src="/video/banner.mkv">
         </video >
       </div>
       <div class="container">
