--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
     <article>
       <div id="banner">
         <video autoplay loop>
-          <source src="/video/banner.mkv">
+          <source src="/video/banner.mp4">
         </video >
       </div>
       <div class="container">
