--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,7 @@
             <div class="sub-sec">
               <div class="mini-container">
                 <div style="margin-top: 2px">
-                <img style="max-width: 78px; border: 1px solid white" id="music-img" src="https://media.pitchfork.com/photos/5c4f19cc49ee6a1432c8dd95/1:1/w_450%2Cc_limit/Jonatan%2520Leandoer127_Nectar.jpg">
+                <img style="max-width: 78px; border: 1px solid white" id="music-img" src="/img/jonatan.webp">
                 </div>
                 <div id="artist" style="padding-top: 10px;">
                   <a target="_blank" href="https://www.youtube.com/watch?v=hMsivXae1oM&ab_channel=jonatanleandoer96-Topic"><span> Psycho's in Charge</span></a>
@@ -89,7 +89,7 @@ This page is still under development, if you find anything weird, please let me 
             <div class="sec">
               <h3 class="">Very cool pic</h3>
               <div class="img-class">
-              <img id="cool" src="http://0x0.st/HJNU.jpeg" alt="very cool pic">
+              <img id="cool" src="/img/climber.jpeg" alt="very cool pic">
               <p class="gray-text"><i>-. Manga Climber</i></p>
               </div>
             </div>
@@ -99,7 +99,7 @@ This page is still under development, if you find anything weird, please let me 
           <div class="sec-chat">
             <h3>Chat</h3>
               <p>In progress</p>
-              <img id="prog" src="http://0x0.st/HJa2.jpeg">
+              <img id="prog" src="/img/inprog.jpeg">
         </div>
       </div>
 
