--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,7 +33,7 @@
           </div>
 
           <div class="sec">
-            <h3>Cool song</h3>
+            <h3>Cool Song</h3>
             <div class="sub-sec">
               <div class="mini-container">
                 <div style="margin-top: 2px">
@@ -53,7 +53,7 @@
           <div style="margin-top: 5px">
             <marquee onmouseover="this.stop()" onmouseout="this.start()" id="gifs" scrollamount="3">
             <a href="https://landchad.net" target="_blank"><img src="https://landchad.net/pix/landchad.gif" alt="LandChad.net"></a>
-<a href="https://melankorin.net/"><img src="https://melankorin.net/assets/img/buttons/button-1.gif" alt=""></a>
+<a href="https://melankorin.net/"><img target="_blank" src="https://melankorin.net/assets/img/buttons/button-1.gif" alt=""></a>
             </marquee>
           </div>
           </div>
@@ -69,7 +69,7 @@ Welcome to my corner of the internet! This page is a personal space where I'll s
               <br>
               <p>
 
-This page is still under development, if you find anything weird, please let me know through my email or Discord.
+This page is still under development, if you find anything weird, please let me know through my email or discord.
               </p>
            </div>
           </div>
