--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="/about/about.html">About</a><li>
               <li class="unv">Trips</li>
-              <li class="unv">Recipies</li>
+              <li> <a href="/recipies/index.html"> Recipies</a></li>
             </ul>
           </div>
           <div class="sec">
