--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,51 +13,9 @@
         </video >
       </div>
       <div class="container">
+        {{ partial "menu.html" .}}
 
-        <div id="menu">
-          <div class="sec">
-            <h3>Menu</h3>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="/about/about.html">About</a><li>
-              <li class="unv">Trips</li>
-              <li> <a href="/recipies/index.html"> Recipies</a></li>
-            </ul>
-          </div>
-          <div class="sec">
-            <h3>Contact</h3>
-            <ul>
-              <li>Discord - .nezi_</li>
-             <li>Email - nezi@nezi.online</li>
-            </ul>
-          </div>
 
-          <div class="sec">
-            <h3>Cool Song</h3>
-            <div class="sub-sec">
-              <div class="mini-container">
-                <div style="margin-top: 2px">
-                <img style="max-width: 78px; border: 1px solid white" id="music-img" src="/img/jonatan.webp">
-                </div>
-                <div id="artist" style="padding-top: 10px;">
-                  <a target="_blank" href="https://www.youtube.com/watch?v=hMsivXae1oM&ab_channel=jonatanleandoer96-Topic"><span> Psycho's in Charge</span></a>
-                <div>
-                  <marquee scrollamount="2" class="gray-text"> Jonatan Leandoer96 </marquee>
-                </div>
-              </div>
-            </div>
-          </div>
-         </div>
-          <div class="sec">
-            <h3>Cool Websites</h3>
-          <div style="margin-top: 5px">
-            <marquee onmouseover="this.stop()" onmouseout="this.start()" id="gifs" scrollamount="3">
-            <a href="https://landchad.net" target="_blank"><img src="https://landchad.net/pix/landchad.gif" alt="LandChad.net"></a>
-<a href="https://melankorin.net/"><img target="_blank" src="https://melankorin.net/assets/img/buttons/button-1.gif" alt=""></a>
-            </marquee>
-          </div>
-          </div>
-        </div>
         <div id="main">
           <div class="sec">
           <h3>Welcome!</h3>
@@ -95,12 +53,7 @@ This page is still under development, if you find anything weird, please let me 
             </div>
           </div>
         </div>
-        <div id="guestbook">
-          <div class="sec-chat">
-            <h3>Chat</h3>
-              <p>In progress</p>
-              <img id="prog" src="/img/inprog.jpeg">
-        </div>
+        {{ partial "chat.html" .}}
       </div>
 
       </div>
