--- a/layouts/recipies/list.html
+++ b/layouts/recipies/list.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <meta charste="utf-8">
+    <title>List of Recipies</title>
   </head>
   <body>
     {{ .Content }}
