--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,8 +14,6 @@
       </div>
       <div class="container">
         {{ partial "menu.html" .}}
-
-
         <div id="main">
           <div class="sec">
           <h3>Welcome!</h3>
@@ -34,7 +32,14 @@ This page is still under development, if you find anything weird, please let me 
           <div class="main-sec">
             <div class="sec">
               <h3>Updates</h3>
-              <div class="new-container">
+              <section class="new-container">
+                <div class="new">
+                  <span>Recipies section</span>
+                  <span class="date">8 Nov 2023</span>
+                </div>
+                <div>
+                  <p class="up-p">Added recipies section</p>
+                </div>
                 <div class="new">
                   <span>Page creation</span>
                   <span class="date">22 Oct 2023</span>
@@ -42,7 +47,7 @@ This page is still under development, if you find anything weird, please let me 
                 <div>
                   <p class="up-p">After a lot of work, page is finally up </p>
                 </div>
-              </div>
+              </section>
             </div>
             <div class="sec">
               <h3 class="">Very cool pic</h3>
