--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -3,16 +3,16 @@
           <div class="sec">
             <h3>Menu</h3>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="/about/">About</a><li>
-              <li class="unv">Trips</li>
               <li> <a href="/recipies/index.html"> Recipies</a></li>
+              <li class="unv"><a>Trips</a></li>
             </ul>
           </div>
           <div class="sec">
             <h3>Contact</h3>
             <ul>
-              <li>Dissdfkljasd;lfcord - .nezi_</li>
+              <li>Discord - .nezi_</li>
              <li>Email - nezi@nezi.online</li>
             </ul>
           </div>
