--- a/layouts/partials/chat.html
+++ b/layouts/partials/chat.html
@@ -1,6 +1,5 @@
         <div id="guestbook">
           <div class="sec-chat">
             <h3>Chat</h3>
-              <p>In progress</p>
-              <img id="prog" src="/img/inprog.jpeg">
+<iframe src="https://www3.cbox.ws/box/?boxid=3533570&boxtag=2nxBGo" width="100%" height="431" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
         </div>
