Adding trips and css modifications

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="xd.css">  
     <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
-</style>
-  <body > 
-    <article>
+  </head>
+  <body> 
+    <article >
       <div id="banner">
         <video autoplay loop>
           <source src="/video/banner.mp4">
@@ -19,11 +19,9 @@
           <div class="sec">
           <h3>Welcome!</h3>
             <div class="sub-sec wel-sec" style="padding:10px;">
-              <p>
-
+              <p >
 Welcome to my corner of the internet! This page is a personal space where I'll share my trips, recipes, favorite songs, and maybe more cool stuff in the future. I hope you like it.
               </p>
-              <br>
               <p>
 
 This page is still under development, if you find anything weird, please let me know through my email or discord.
