--- a/layouts/trips/list.html
+++ b/layouts/trips/list.html
@@ -23,9 +23,9 @@
                   {{ .Content }}
                 </div>
               <ul class="rec-list">
-                <!--{{ range .Data.Pages }}
+                {{ range .Data.Pages }}
                 <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-                {{ end }} -->
+                {{ end }} 
              </ul>
             </div>
           </div>
