--- a/layouts/trips/single.html
+++ b/layouts/trips/single.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="/style.css">
-    <style>
-    </style>
+    <link rel="stylesheet" href="/xd.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
+
   </head>
    <body > 
     <article style="padding: 100px 0;">
@@ -17,7 +17,7 @@
         <div id="main">
           <div class="sec">
             <h3>About</h3>
-            <div class="sub-sec wel-sec" style="padding:10px;">
+            <div class="sub-sec wel-sec image-content" style="padding:10px; text-align: justify;">
               {{ .Content }}
       
            </div>
