--- a/layouts/about/about.html
+++ b/layouts/about/about.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home Page</title>
+    <title>About</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
     <style>
     </style>
   </head>
@@ -19,17 +20,11 @@
             <h3>About</h3>
             <div class="sub-sec wel-sec" style="padding:10px;">
               <p>
-              
-              I'm a 20-year-old from Costa Rica who loves computers, music, and video games.
+              First time I saw a website like this was from <a class="link" target="_blank" href="https://www.bugswriter.com/">bugswriter</a>. He has a very cool old style website which I was inspired by. Also, this idea of having a personal space where you can do whatever you want convinced me of creating my own website.
               </p>
-              <br>
+              <br> 
               <p>
-              I'd like to talk more about this page tho. First time I saw a website like this was from <a class="link" target="_blank" href="https://www.bugswriter.com/">bugswriter</a>. He has a very cool old style website which I was inspired by. Also, this idea of having a personal space where you can do whatever you want without censorship or an algorithm in between convinced me of doing my own website, crazy no one thinks about that.
-              </p>
-              <br>
-<p>
-
-This page is still under develpment, so, very soon im gonna add a recipies section, I dont really know how to cook so im hoping that section forces me to learn how to cook. Im gonna also have a trips section, one of my dreams is being able to hike and climb big mountains, I would like to document every single trip. Hope you find my page interesting, thanks for reading!
+              This website is also for my descendents, it would've be so cool to visit a website from some anscestor. Imagine leaving a record of your existance for how long the internet lasts for your future generations! Sounds really cool. I don't know if internet will still exist by then, if english will still be spoken or how much human life will last. It's still cool. 
               </p>
            </div>
           </div>
