--- a/layouts/recipies/list.html
+++ b/layouts/recipies/list.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="/style.css"> </head>
+    <title>Recipies</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
+
     <style>
         .rec-list{
           list-style-type: disc;
