--- a/layouts/recipies/single.html
+++ b/layouts/recipies/single.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home Page</title>
+    <title>Recipies</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
     <style>
     </style>
   </head>
