--- a/layouts/about/about.html
+++ b/layouts/about/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>About</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
     <style>
     </style>
@@ -22,7 +22,6 @@
               <p>
               First time I saw a website like this was from <a class="link" target="_blank" href="https://www.bugswriter.com/">bugswriter</a>. He has a very cool old style website which I was inspired by. Also, this idea of having a personal space where you can do whatever you want convinced me of creating my own website.
               </p>
-              <br> 
               <p>
               This website is also for my descendents, it would've be so cool to visit a website from some anscestor. Imagine leaving a record of your existance for how long the internet lasts for your future generations! Sounds really cool. I don't know if internet will still exist by then, if english will still be spoken or how much human life will last. It's still cool. 
               </p>
