--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="xd.css">  
+    <link rel="stylesheet" href="styles.css">  
     <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
   </head>
   <body> 
@@ -59,7 +59,7 @@ This page is still under development, if you find anything weird, please let me 
             <div class="sec">
               <h3 class="">Very cool pic</h3>
               <div class="img-class">
-              <img id="cool" src="/img/climber.jpeg" alt="very cool pic">
+              <img id="cool" src="/img/climber.jpeg" alt="very cool pic" style="max-width: 50px;">
               <p class="gray-text"><i>-. Manga Climber</i></p>
               </div>
             </div>
