--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -3,7 +3,7 @@
           <div class="sec">
             <h3>Menu</h3>
             <ul>
-              <li><a href="../index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li><a href="/about/">About</a><li>
               <li> <a href="/recipies/index.html"> Recipies</a></li>
               <li class="unv"><a>Trips</a></li>
