--- a/layouts/recipies/list.html
+++ b/layouts/recipies/list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Recipies</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
 
     <style>
