--- a/layouts/trips/list.html
+++ b/layouts/trips/list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="/style.css"> </head>
+    <link rel="stylesheet" href="/styles.css"> </head>
     <style>
         .rec-list{
           list-style-type: disc;
