--- a/layouts/trips/single.html
+++ b/layouts/trips/single.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="/xd.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
 
   </head>
