trips and friends

--- a/layouts/about/about.html
+++ b/layouts/about/about.html
@@ -20,10 +20,13 @@
             <h3>About</h3>
             <div class="sub-sec wel-sec" style="padding:10px;">
               <p>
-              First time I saw a website like this was from <a class="link" target="_blank" href="https://www.bugswriter.com/">bugswriter</a>. He has a very cool old style website which I was inspired by. Also, this idea of having a personal space where you can do whatever you want convinced me of creating my own website.
+              First time I saw a website like this was on <a class="link" target="_blank" href="https://www.bugswriter.com/">bugswriter's</a> website. He has a very cool old style website which I was inspired by. Also, this idea of having a personal space where you can do whatever you want convinced me of creating my own website.
               </p>
               <p>
-              This website is also for my descendents, it would've be so cool to visit a website from some anscestor. Imagine leaving a record of your existance for how long the internet lasts for your future generations! Sounds really cool. I don't know if internet will still exist by then, if english will still be spoken or how much human life will last. It's still cool. 
+              This website is where I can store every memory, my grandkids might end up reading this, the grandkids of my grandkids too! I would've been so happy if I knew there was a personal website of one of my ancestors so that's why this page exists. 
+              </p>
+              <p>
+              I might add more text in the future xd.
               </p>
            </div>
           </div>
