--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,6 @@
 Welcome to my corner of the internet! This page is a personal space where I'll share my trips, recipes, favorite songs, and maybe more cool stuff in the future. I hope you like it.
               </p>
               <p>
-
 This page is still under development, if you find anything weird, please let me know through my email or discord.
               </p>
            </div>
@@ -31,7 +30,24 @@ This page is still under development, if you find anything weird, please let me 
           <div class="main-sec">
             <div class="sec">
               <h3>Updates</h3>
-              <section class="new-container">
+              <section class="new-container" style="max-height: 200px; overflow-y: auto;">
+
+                <div class="newest">
+                  <span>Friends section</span>
+                  <span class="date">26 Nov 2023</span>
+                </div>
+                <div>
+                  <p class="up-p">List of cool people</p>
+                </div>
+
+                <div class="newest">
+                  <span>Trips sections</span>
+                  <span class="date">26 Nov 2023</span>
+                </div>
+                <div>
+                  <p class="up-p">Added first trip too</p>
+                </div>
+
                 <div class="new">
                   <span>Added chat</span>
                   <span class="date">26 Nov 2023</span>
@@ -54,8 +70,8 @@ This page is still under development, if you find anything weird, please let me 
                 <div>
                   <p class="up-p">After a lot of work, page is finally up </p>
                 </div>
-              </section>
             </div>
+              </section>
             <div class="sec">
               <h3 class="">Very cool pic</h3>
               <div class="img-class">
