--- a/layouts/trips/list.html
+++ b/layouts/trips/list.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Home Page</title>
     <link rel="stylesheet" href="/styles.css"> </head>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
+
     <style>
         .rec-list{
           list-style-type: disc;
