--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -6,13 +6,15 @@
               <li><a href="/">Home</a></li>
               <li><a href="/about/">About</a><li>
               <li> <a href="/recipies/index.html"> Recipies</a></li>
-              <li class="unv"><a>Trips</a></li>
+              <li><a href="/trips/">Trips</a></li>
+              <li><a href="/friends/">Cool People</a></li>
             </ul>
           </div>
           <div class="sec">
             <h3>Contact</h3>
             <ul>
              <li>Email - nezi@nezi.online</li>
+             <li>Discord - x234xewr4 </li>
             </ul>
           </div>
           <div class="sec">
@@ -37,7 +39,9 @@
           <div style="margin-top: 5px">
             <marquee onmouseover="this.stop()" onmouseout="this.start()" id="gifs" scrollamount="3">
             <a href="https://landchad.net" target="_blank"><img src="https://landchad.net/pix/landchad.gif" alt="LandChad.net"></a>
-<a href="https://melankorin.net/"><img target="_blank" src="https://melankorin.net/assets/img/buttons/button-1.gif" alt=""></a>
+
+<a href="https://melankorin.net/" target="_blank"><img src="https://melankorin.net/assets/img/buttons/button-1.gif" alt=""></a>
+
             </marquee>
           </div>
           </div>
