--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,6 +5,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">  
     <link rel="icon" type="image/x-icon" href="/img/favicon.png"><link>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body> 
     <article >
@@ -34,7 +35,7 @@ This page is still under development, if you find anything weird, please let me 
 
                 <div class="newest">
                   <span>Friends section</span>
-                  <span class="date">26 Nov 2023</span>
+                  <span class="date">30 Jan 2023</span>
                 </div>
                 <div>
                   <p class="up-p">List of cool people</p>
@@ -42,7 +43,7 @@ This page is still under development, if you find anything weird, please let me 
 
                 <div class="newest">
                   <span>Trips sections</span>
-                  <span class="date">26 Nov 2023</span>
+                  <span class="date">30 Jan 2023</span>
                 </div>
                 <div>
                   <p class="up-p">Added first trip too</p>
