--- a/layouts/friends/list.html
+++ b/layouts/friends/list.html
@@ -95,8 +95,8 @@
                 <div>
                   <span class="cool-ppl">Friends</span>
                   <ul>
-                    <li>Leti</li>
                     <li>Ale</li>
+                    <li>Leti</li>
                     <li>Luis</li>
                     <li>Jin</li>
                     <li>Panf</li> 
@@ -138,7 +138,7 @@
                 </div>
 
                 <div>
-                  <span class="cool-ppl">Cool people online <span>
+                  <span class="cool-ppl">Cool people online </span>
                       <ul>
                         <li class="gray">Wartai</li>
                         <li class="gray">Tuwkkake</li>
